# qdigidoc

./: .travis.yml  AUTHORS  AppxManifest.xml  AppxManifest.xml.cmake  CMakeLists.txt  COPING  README  README.md  RELEASE-NOTES.md  RELEASE-NOTES.txt  entitlement.plist  qdigidoc.en-US.wxl  qdigidoc.et-EE.wxl  qdigidoc.spec  qdigidoc.wxs  qdigidocclient.entitlements  qdigidocclient.pfx
DigiDocQL/: CMakeLists.txt  GeneratePreviewForURL.mm  GenerateThumbnailForURL.c  Info.plist  main.c
EsteidShellExtension/: CMakeLists.txt  EsteidShellExtension.rc  EsteidShlExt.h  EsteidShlExt.rgs
client/: AccessCert.cpp  AccessCert.h  Application.cpp  Application.h  Application_mac.mm  CMakeLists.txt  DigiDoc.cpp  DigiDoc.h  FileDialog.cpp  FileDialog.h  MainWindow.cpp  MainWindow.h  MainWindow.ui  MobileDialog.cpp  MobileDialog.h  MobileDialog.ui  PrintSheet.cpp  PrintSheet.h  QCNG.cpp  QCNG.h  QCSP.cpp  QCSP.h  QMobileSigner.cpp  QMobileSigner.h  QPKCS11.cpp  QPKCS11.h  QPKCS11_p.h  QSigner.cpp  QSigner.h  RELEASE-NOTES.txt  RegisterP12.cpp  RegisterP12.h  SettingsDialog.cpp  SettingsDialog.h  SettingsDialog.ui  SignatureDialog.cpp  SignatureDialog.h  TSLDownload.cpp  TreeWidget.cpp  TreeWidget.h  (+10 more)
client/certs/: SK TEST services access CA 2012.crt  SK services access CA 2010.crt  certs.qrc
client/images/: images.qrc
client/mac/: Info.plist.cmake
client/mac/Resources/: Icon.icns
client/mac/Resources/en.lproj/: InfoPlist.strings
client/mac/Resources/et.lproj/: InfoPlist.strings
client/mac/Resources/ru.lproj/: InfoPlist.strings
client/translations/: en.ts  et.ts  ru.ts  tr.qrc.cmake
client/translations/mac/: en.ts  et.ts  ru.ts
client/ui/: MainWindow.ui  MobileDialog.ui  RegisterP12.ui  SettingsDialog.ui  SignatureDialog.ui
cmake/modules/: FindGecko.cmake  FindIconv.cmake  FindLibDigiDoc.cmake  FindLibDigiDocpp.cmake  FindLibP11.cmake  FindOOoSDK.cmake  FindOpenSC.cmake  FindOpenSSLCrypto.cmake  FindPCSCLite.cmake  FindPKCS11H.cmake  FindSmartCardpp.cmake  FindXSD.cmake  FindXercesC.cmake  FindXmlSecurityC.cmake
common/: CMakeLists.txt  CertificateWidget.cpp  CertificateWidget.h  CheckConnection.cpp  CheckConnection.h  ComboBox.cpp  ComboBox.h  Common.cpp  Common.h  IKValidator.cpp  IKValidator.h  PinDialog.cpp  PinDialog.h  Settings.h  SslCertificate.cpp  SslCertificate.h  sslConnect.cpp  sslConnect.h  sslConnect_p.h
common/images/: common_images.qrc
common/translations/: common_en.ts  common_et.ts  common_ru.ts  common_tr.qrc.cmake  qt_et.ts  qt_ru.ts
common/ui/: CertificateWidget.ui
crypto/: Application.cpp  Application.h  CMakeLists.txt  CertAddDialog.ui  CryptoDoc.cpp  CryptoDoc.h  KeyDialog.cpp  KeyDialog.h  KeyDialog.ui  LdapSearch.cpp  LdapSearch.h  MainWindow.cpp  MainWindow.h  MainWindow.ui  Poller.cpp  Poller.h  RELEASE-NOTES.txt  SettingsDialog.cpp  SettingsDialog.h  TreeWidget.cpp  TreeWidget.h  entitlement.plist  main.cpp  qdigidoc-crypto.desktop  qdigidoc-crypto.xml  qdigidoc-cypto.appdata.xml  qdigidoccrypto.1.cmake  qdigidoccrypto.rc  version.h
crypto/images/: Icon.icns  crypto_header.psd  crypto_header2.psd  crypto_images.qrc  images.qrc
crypto/mac/: Info.plist.cmake
crypto/mac/MacOS/: qdigidoccrypto.sh
crypto/mac/Resources/: Icon.icns
crypto/mac/Resources/en.lproj/: InfoPlist.strings
crypto/mac/Resources/et.lproj/: InfoPlist.strings
crypto/mac/Resources/ru.lproj/: InfoPlist.strings
crypto/translations/: crypto_et.ts  crypto_ru.ts  crypto_tr.qrc  et.ts  ru.ts  tr.qrc  tr.qrc.cmake
crypto/ui/: CertAddDialog.ui  KeyAddDialog.ui  MainWindow.ui  SettingsDialog.ui
debian/: changelog  control
extensions/: CMakeLists.txt
extensions/DigiDocQL/: CMakeLists.txt  GeneratePreviewForURL.mm  Info.plist
extensions/EsteidShellExtension/: CMakeLists.txt  EsteidShellExtension.cpp  EsteidShellExtension.idl  EsteidShellExtension.rc  EsteidShellExtension.wxs  EsteidShlExt.cpp  EsteidShlExt.h  resource.h  targetver.h
extensions/kde/: CMakeLists.txt  qdigidoc-signer.desktop
extensions/nautilus/: CMakeLists.txt  nautilus-qdigidoc.py
extensions/nautilus/po/: et.po  nautilus-qdigidoc.pot  ru.po
